# cyberfabric-core

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  TODO28.txt  cov.md  deny.toml  release-plz.toml  server.sh
.claude/commands/: update-docs.md
.cypilot/.core/architecture/features/: kit-management.md
.cypilot/.gen/: AGENTS.md
.cypilot/config/: artifacts.toml  core.toml
.cypilot/config/kits/sdlc/: constraints.toml
.github/workflows/: e2e.yml
apps/hyperspot-server/: Cargo.toml
apps/hyperspot-server/src/: main.rs  registered_modules.rs
config/: e2e-features.txt  e2e-local.yaml  mini-chat.yaml  quickstart.yaml
docs/api/: api.json
docs/arch/authorization/: AUTHZ_USAGE_SCENARIOS.md  DESIGN.md  INTEGRATION_TEST_PLAN.md  RESOURCE_GROUP_MODEL.md  TENANT_MODEL.md
docs/arch/errors/: DESIGN.md
docs/checklists/: DESIGN.md
docs/modkit_unified_system/: 13_e2e_testing.md
dylint_lints/: Cargo.toml  README.md
dylint_lints/de02_api_layer/de0205_operation_builder/.cargo/: config.toml
dylint_lints/de02_api_layer/de0205_operation_builder/src/: lib.rs
dylint_lints/de11_testing/de1101_tests_in_separate_files/: Cargo.toml  README.md
dylint_lints/de11_testing/de1101_tests_in_separate_files/src/: lib.rs
dylint_lints/de11_testing/de1101_tests_in_separate_files/ui/: other_module_inline_tests.rs  resource_group_inline_case.stderr  resource_group_out_of_line_test_module.rs
dylint_lints/lint_utils/src/: lib.rs
libs/modkit-auth/src/: claims_error.rs  config.rs  validation.rs
libs/modkit-auth/src/providers/: jwks.rs
libs/modkit-canonical-errors/src/: error.rs  problem.rs
libs/modkit-db/: Cargo.toml
libs/modkit-db/examples/: outbox_dead_letters.rs  outbox_retry_reject.rs
libs/modkit-db/src/: db_provider.rs  deadlock.rs
libs/modkit-db/src/odata/: core.rs  sea_orm_filter.rs
libs/modkit-db/src/outbox/: builder.rs  core.rs  dead_letter.rs  dialect.rs  handler.rs  integration_tests.rs  migrations.rs  mod.rs  processor.rs  sequencer.rs  strategy.rs  types.rs
libs/modkit-db/src/secure/: cond.rs  (+3 more)
libs/modkit-errors/: Cargo.toml
libs/modkit-node-info/src/: error.rs  sysinfo_collector.rs
libs/modkit-odata/src/: filter.rs  odata_parse_tests.rs  page.rs  problem_mapping.rs
libs/modkit-sdk/src/: pager.rs
libs/modkit-security/src/: access_scope.rs  lib.rs
libs/modkit/tests/: odata_select.rs
libs/system-sdks/: Cargo.toml
modules/credstore/credstore/: Cargo.toml
modules/credstore/credstore-sdk/: Cargo.toml  README.md
modules/credstore/credstore/src/: config.rs  lib.rs  module.rs
modules/credstore/credstore/src/domain/: error.rs  local_client.rs  mod.rs  service.rs
modules/credstore/docs/: DESIGN.md  PRD.md
modules/file-parser/: Cargo.toml
modules/file-storage/docs/: PRD.md
modules/mini-chat/docs/: DESIGN.md  PRD.md  openapi.html  openapi.json
modules/mini-chat/mini-chat/: Cargo.toml
modules/mini-chat/mini-chat-sdk/: Cargo.toml
modules/mini-chat/mini-chat-sdk/src/: error.rs  gts.rs  lib.rs  models.rs  plugin_api.rs
modules/system/api-gateway/: Cargo.toml
modules/system/grpc-hub/: Cargo.toml
modules/system/module-orchestrator/: Cargo.toml
modules/system/oagw/: DESIGN.md
modules/system/resource-group/resource-group/: Cargo.toml
modules/system/resource-group/resource-group-sdk/: Cargo.toml
modules/system/resource-group/resource-group-sdk/src/: api.rs  error.rs  lib.rs  models.rs
modules/system/resource-group/resource-group-sdk/src/odata/: groups.rs  hierarchy.rs  memberships.rs  mod.rs  types.rs
modules/system/resource-group/resource-group/src/: config.rs  lib.rs  module.rs
modules/system/resource-group/resource-group/src/api/: mod.rs
modules/system/resource-group/resource-group/src/api/rest/: auth.rs  auth_tests.rs  dto.rs  dto_tests.rs  error.rs  handlers.rs  mod.rs  routes.rs
modules/system/resource-group/resource-group/src/api/rest/handlers/: groups.rs  memberships.rs  mod.rs  types.rs
modules/system/resource-group/resource-group/src/api/rest/routes/: groups.rs  memberships.rs  mod.rs  types.rs
modules/system/resource-group/resource-group/src/domain/: error.rs  group_service.rs  membership_service.rs  mod.rs  read_service.rs  repo.rs  rg_service.rs  seeding.rs  service.rs  service_test.rs  type_service.rs  validation.rs
modules/system/resource-group/resource-group/src/domain/cdc/: event.rs  handler.rs  handler_test.rs  mod.rs  resync.rs
modules/system/resource-group/resource-group/src/infra/: mod.rs
modules/system/resource-group/resource-group/src/infra/db/entity/: mod.rs  resource_group.rs  resource_group_closure.rs  resource_group_membership.rs  resource_group_type.rs
modules/system/resource-group/resource-group/src/infra/db/migrations/: m20260305_000001_initial.rs  m20260310_000002_tenant_closure_projection.rs  mod.rs
modules/system/resource-group/resource-group/src/infra/db/repo/: closure_repo.rs  group_repo.rs  membership_repo.rs  mod.rs  type_repo.rs
modules/system/resource-group/resource-group/src/infra/storage/: group_repo.rs  membership_repo.rs  mod.rs  odata_mapper.rs  odata_mapper_tests.rs  type_repo.rs
modules/system/resource-group/resource-group/src/infra/storage/entity/: gts_type.rs  gts_type_allowed_membership.rs  gts_type_allowed_parent.rs  mod.rs  resource_group.rs  resource_group_closure.rs  resource_group_membership.rs
modules/system/resource-group/resource-group/src/infra/storage/migrations/: m20260306_000001_initial.rs  mod.rs
modules/system/resource-group/resource-group/tests/: api_rest_test.rs  authz_integration_test.rs  domain_unit_test.rs  group_service_test.rs  membership_service_test.rs  seeding_test.rs  tenant_filtering_db_test.rs  tenant_scoping_test.rs  type_service_test.rs
modules/system/resource-group/resource-group/tests/common/: mod.rs
rg/: api.md  auth-questions.md  benchmark_queries.py  issues.md  migration.sql  openapi.html  openapi.yaml  queries.sql  questions.md  seed_generator.py  seeding.sql  size.md
scripts/: ci.py  coverage.py
scripts/lib/: prereq.py
testing/e2e/: conftest.py  pytest.ini  requirements.txt
testing/scripts/: rg_smoke_test.sh
(+151 files in other folders)
