[package]
name = "cf-mini-chat-sdk"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SDK for mini-chat: policy plugin traits, models, and errors"

[lib]
name = "mini_chat_sdk"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
gts = { workspace = true }
gts-macros = { workspace = true }
modkit = { workspace = true }
