[package]
name = "cf-resource-group-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SDK for resource-group module: API traits, models, and error definitions"
keywords = ["cyberfabric", "cyberfabric-system"]
categories = ["development-tools"]

[lib]
name = "resource_group_sdk"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
modkit-security = { workspace = true }
